requisição e exibição do nome do usuário adicionados

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <script>
             window.alert ("Olá anônimo, você acaba de entrar no meu site !")
             window.confirm ("Você deseja continuar a sua sessão nesse site ?")
+            nome = window.prompt ("Qual o seu nome ?")
+            window.alert ("Seja bem vindo " + nome + "!")
         </script>
 
         <h1>Olá !</h1>
