Ex 6 - Pergunte o último sobrenome e exiba em letras maiúsculas, junto do tamanho

--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
     <body>
 
         <script>
-            segundoNome = window.prompt("Qual o seu segundo nome ?")
-            primeiroNome = window.prompt ("Qual é o seu primeiro nome ?")
-            window.alert("Olá, " + primeiroNome + " " + segundoNome + " é um prazer ! :D")
+            ultimoNome = window.prompt("Qual o seu ultimo nome?")
+            window.alert(`Seu ultimo nome em letras maiusculas fica: ${ultimoNome.toUpperCase()} e tem um total de ${ultimoNome.length} letras.`)
         </script>
             
     </body>
 
     <h1>Olá ! :D</h1>
-    
+
 </html>
