--- a/ex_01/index.html
+++ b/ex_01/index.html
@@ -2,10 +2,9 @@
 <html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
-        <meta author="Gabriel">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>M1S03_Projeto_01</title>
+        <title>Ex - 01 - Alerte o usuário</title>
         <style>
             body{
                 background-color: rgb(161, 161, 252);
@@ -15,27 +14,13 @@
             }
         </style>
     </head>
-
     <body>
 
         <script>
-            
-            function adicionaZero(number){
-                if (number <= 9) 
-                    return "0" + number;
-                else
-                    return number;
-            }
-
-            var data = new Date
-
-            formatHorario = adicionaZero(data.getHours().toString()) + ":" + adicionaZero(data.getMinutes().toString())
-            alert(`São ${formatHorario}`)
-
+            window.alert ("Olá anônimo, você acaba de entrar no meu site !")
         </script>
 
-
-            <h1>Olá ! :D</h1>
+        <h1>Olá !</h1>
 
     </body>
 </html>
